--- a/spin_service/main/templates/main/stat.html
+++ b/spin_service/main/templates/main/stat.html
@@ -5,25 +5,42 @@
     <title>Statistics</title>
 </head>
 <body>
-    {% csrf_token %}
+{% csrf_token %}
     <table>
         <thead>
-            <tr>
-                <th>Номер раунда</th>
-                <th>Кол-во игроков</th>
-            </tr>
+        <tr>
+            <th>Номер раунда</th>
+            <th>Кол-во игроков</th>
+        </tr>
         </thead>
         <tbody>
-            {% for player in players %}
-                <tr>
-                    <td>{{ player.round_number }}</td>
-                    <td>{{ player.name }}</td>
-                </tr>
-            {% endfor %}
+        {% for player in players %}
+        <tr>
+            <td>{{ player.round_number }}</td>
+            <td>{{ player.users }}</td>
+        </tr>
+        {% endfor %}
         </tbody>
     </table>
-    {% for player in activity %}
-        <p>{{ player }}</p>
-    {% endfor %}
+    <br>
+    <br>
+    <table>
+        <thead>
+        <tr>
+            <th>ID Игрока</th>
+            <th>Кол-во раундов</th>
+            <th>Среднее кол-во прокручиваний</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for ak in activity %}
+        <tr>
+            <td>{{ ak.name }}</td>
+            <td>{{ ak.rounds }}</td>
+            <td>{{ ak.avg_spins }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 </body>
 </html>
